# SnowPlow

./: README.md  run_ros2.sh  serial_ports.txt
docs/: GPS.MD  IMU.MD  Overview.MD  lidar.MD  motors.MD  operating.MD  pathing.MD  reinstall.MD
logs/: Error-Logs.txt  SampleUCenterLog.txt  gps.txt
rosserial_python/: CMakeLists.txt  package.xml
rpi/: AmesCorrectionData.sh  StPaulCorrectionData.sh
src/: Arduino_Node.py  GPS_Node.py  IMU.py  Serial_Detect.py  gps.py  serial_ports.txt
src/NewScripts/: LidarSenseNoRos.py
src/ino/IMUArduino/: IMUArduino.ino
test/: test_mock_gps.py
